[gd_scene load_steps=5 format=3 uid="uid://b1xa61s4wsnfi"]

[ext_resource type="Script" path="res://script/startScreen.gd" id="1_wy37u"]
[ext_resource type="Texture2D" uid="uid://clch8r61b7v5e" path="res://assets/spaceTitleScreen.png" id="1_ydybr"]
[ext_resource type="Theme" uid="uid://bwmoc62uymsn6" path="res://pause_menu_theme.tres" id="3_0t8ob"]
[ext_resource type="AudioStream" uid="uid://1576rsdrpj46" path="res://assets/neon-signs-simon-folwar-main-version-6833-02-40.mp3" id="3_sicsd"]

[node name="StartScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wy37u")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(613, 315)
scale = Vector2(0.215, 0.215)
texture = ExtResource("1_ydybr")

[node name="spaceGame" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 203.0
offset_top = 23.0
offset_right = 1009.0
offset_bottom = 324.0
theme = ExtResource("3_0t8ob")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 100
text = "SPACE GAME"

[node name="controlsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 305.0
offset_top = 379.0
offset_right = 486.0
offset_bottom = 420.0
theme = ExtResource("3_0t8ob")
text = "Controls"

[node name="play" type="Button" parent="."]
layout_mode = 0
offset_left = 697.0
offset_top = 380.0
offset_right = 807.0
offset_bottom = 421.0
theme = ExtResource("3_0t8ob")
text = "Play"

[node name="controlsPopup" type="Popup" parent="."]
title = "Controls"
initial_position = 1
size = Vector2i(500, 353)
theme = ExtResource("3_0t8ob")

[node name="RichTextLabel" type="RichTextLabel" parent="controlsPopup"]
offset_left = 125.255
offset_right = 375.255
offset_bottom = 500.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/normal_font_size = 50
text = "Controls"
fit_content = true

[node name="RichTextLabel2" type="RichTextLabel" parent="controlsPopup"]
offset_top = 78.185
offset_right = 491.99
offset_bottom = 306.12
theme_override_font_sizes/normal_font_size = 40
text = "Space: Shoot
WASD or Arrow Keys: fly
Shift: Switch Ammo
R: Reload
E: Boost"
fit_content = true

[node name="hostPopup" type="Popup" parent="."]
transparent_bg = true
position = Vector2i(-27, 274)
size = Vector2i(1366, 100)
unresizable = false
theme = ExtResource("3_0t8ob")

[node name="RichTextLabel" type="RichTextLabel" parent="hostPopup"]
offset_left = 81.51
offset_right = 1106.51
offset_bottom = 40.0
theme_override_font_sizes/normal_font_size = 30
text = "Online play is still in developnment! Please check back later!"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_sicsd")
volume_db = -21.027

[connection signal="button_down" from="controlsButton" to="." method="_on_controls_button_button_down"]
[connection signal="button_down" from="play" to="." method="_on_play_button_down"]
[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
